--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "classnames": "^2.3.1",
     "dotenv": "^10.0.0",
     "firebase": "^9.1.0",
     "node-sass": "^6.0.1",
